--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ cryptography==41.0.3
 cycler==0.10.0
 Flask==2.3.2
 Flask-Cors==4.0.0
+Flask-JWT-Extended==4.5.2
 Flask-SQLAlchemy==3.0.5
 fonttools==4.42.1
 idna==2.10
